--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==2.3.3
-pandas==2.2.2
-scikit-learn==1.3.0
-joblib==1.3.2
-numpy==1.26.4
-scipy==1.11.4
-matplotlib==3.8.0
-seaborn==0.12.2
+
+
+flask
+gunicorn
+numpy
+pandas
+scikit-learn
